--- a/tarea1.html
+++ b/tarea1.html
@@ -4,7 +4,7 @@
 <body>
     <h1> Bienvenido a mi página web </h1>
     <p>
-        Ingresa tu usuario:
+        Ingresa tu MEYLY:
     </p>
     <textarea>
 
