--- a/index.html
+++ b/index.html
@@ -1,26 +1,95 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portafolio: Meyly Mendoza Cobeñas</title>
+  <meta name="description" content="Portafolio profesional de Meyly Mendoza Cobeñas">
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1> Bienvenido a mi página web </h1>
-    <p>
-        Ingresa tu MEYLY:
-    </p>
-    <textarea>
+  <header>
+    <div class="perfil">
+    <img src="assets/MEFOTO.jpg" alt="MC" class="fotoperfil">
 
-    </textarea>
-    <p>
-     contraseña:
-    </p>
-    <textarea>
-        
-    </textarea>
-    
-    <button>
-        ingresar
-    </button>
+        <h1>PORTAFOLIO PROFESIONAL</h1>
+    </div>
+  </header>
+
+  <main>
+    <!--Identity-->
+    <section>
+        <h2>Identidad</h2>
+        <p><strong>Nombre:</strong> Meyly Mendoza Cobeñas</p>
+        <p><strong>Educación:</strong> Universidad ESAN </p>
+        <p><strong>Carrera:</strong> Ingeniería de Tecnología de la Información y Sistemas</p>
+        <p><strong>Rol Objetivo:</strong> Analizar y transformar datos para generar insights que apoyen decisiones estratégicas.</p>
+        <p><strong>Dirección:</strong> Lima – Chaclacayo</p>
+    </section>
+
+    <!-- Objetivo Profesional -->
+    <section>
+      <h2>Objetivo Profesional</h2>
+      <p>
+        Estudiante de Ingeniería de Tecnología de la Información y Sistemas, orientada al Análisis de Datos y
+        Business Intelligence. A corto plazo, quiero aplicar herramientas como Power BI, SQL Server y Excel avanzado
+        para apoyar la toma de decisiones. A mediano plazo, deseo crecer como desarrolladora Front-end, creando
+        soluciones web que integren datos y mejoren la experiencia del usuario.
+      </p>
+    </section>
+
+    <!-- Tecnologías -->
+    <section>
+      <h2>Tecnologías de Interés</h2>
+      <div class="chips">
+        <span class="chip">Power BI</span>
+        <span class="chip">SQL Server</span>
+        <span class="chip">Excel Avanzado</span>
+        <span class="chip">HTML</span>
+        <span class="chip">CSS</span>
+        <span class="chip">JavaScript</span>
+      </div>
+    </section>
+
+    <!-- Proyectos -->
+    <section>
+      <h2>Proyectos Destacados</h2>
+      <p>
+        <strong>Dave Octopus:</strong> Prototipo de asistencia para niños con Asperger —
+        <a href="https://link.springer.com/book/10.1007/978-981-97-4780-1" target="_blank">Ver publicación</a>
+      </p>
+      <p>
+        <strong>Mapa de Wifi Gratuito:</strong> Algoritmo de Prim aplicado en Perú —
+        <a href="https://github.com/MEYLYMENDOZA/MAPA-WIFI-GRATUITO" target="_blank">Repositorio GitHub</a>
+      </p>
+    </section>
+
+    <!-- Intereses -->
+    <section>
+    <h2>Intereses</h2>
+    <ul>
+        <li> Me apasiona la tecnología y el análisis de datos.</li>
+        <li> Disfruto aprender nuevas herramientas y metodologías.</li>
+        <li> Me motiva contribuir en proyectos colaborativos e innovadores.</li>
+    </ul>
+    </section>
+
+
+    <!-- Contacto -->
+    <section id="contacto">
+      <h2>Contacto</h2>
+      <p><strong>Email:</strong> <a href="mailto:meymendozaxo@gmail.com">meymendozaxo@gmail.com</a></p>
+      <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/meyly-mendoza-cobeñas" target="_blank">www.linkedin.com/in/meyly-mendoza-cobeñas</a></p>
+      <p><strong>GitHub:</strong> <a href="https://github.com/MEYLYMENDOZA" target="_blank">https://github.com/MEYLYMENDOZA</a></p>
+      <button onclick="mostrarAlerta()">Enviar mensaje</button>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Meyly Mendoza Cobeñas | Portafolio Profesional</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
-<footer>
-
-</footer> 
 </html>
